# POC-ACS

./: .gitignore  CMakeLists.txt  README.md  compile.sh  index.cfg  readme.md  run.py
ACS/lab1_cpp-trush_minieieva/: CMakeLists.txt  main.cpp  methods.cpp  methods.h  output.txt  test.py
ACS/lab2_integral-sobko_trush/: CMakeLists.txt  readme.md  requirements.txt  test.py
ACS/lab2_integral-sobko_trush/data/: data.cfg
ACS/lab2_integral-sobko_trush/include/: config.hpp  integrals.hpp  time_counting.hpp
ACS/lab2_integral-sobko_trush/src/: config.cpp  integrals.cpp  main.cpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/: CMakeLists.txt  index.cfg  readme.md
ACS/lab3_words_count_1-ruban_bondarenko_trush/include/: limits.hpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/list_and_read/: list_and_read.hpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/mt_deque/: mt_deque.hpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/mt_unordered_map/: mt_unordered_map_t.hpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/src/: main.cpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/toml_parser/: toml_parser.cpp  toml_parser.hpp
ACS/lab3_words_count_1-ruban_bondarenko_trush/word_count/: word_count.cpp  word_count.hpp
ACS/lab4_words_count_2-ruban_bondarenko_trush/: .gitignore  CMakeLists.txt  readme.md  run.sh
ACS/lab4_words_count_2-ruban_bondarenko_trush/include/: archive_manager.hpp  custom_traits.hpp  list_and_read.hpp  mt_queue.hpp  mt_queue_multi.hpp  parallel-merge.hpp  thread_pool.hpp  toml_parser.hpp  word_count.hpp
ACS/lab4_words_count_2-ruban_bondarenko_trush/src/: archive_manager.cpp  list_and_read.cpp  main.cpp  parallel-merge.cpp  toml_parser.cpp  word_count.cpp
ACS/lab5_words_count_3-ruban_bondarenko_trush/: .gitignore  CMakeLists.txt  index.cfg  readme.md
ACS/lab5_words_count_3-ruban_bondarenko_trush/include/: exit_codes.hpp  list_and_read.hpp  parallel-merge.hpp  thread_pool_runnables.hpp  word_count.hpp
ACS/lab5_words_count_3-ruban_bondarenko_trush/src/: list_and_read.cpp  main.cpp  word_count.cpp
ACS/lab6_words_count_4-ruban_bondarenko_trush_folly/: CMakeLists.txt
ACS/lab6_words_count_4-ruban_bondarenko_trush_folly/include/: archive_manager.hpp  list_and_read.hpp  word_count.hpp
ACS/lab6_words_count_4-ruban_bondarenko_trush_folly/src/: list_and_read.cpp  main.cpp  merge.cpp
ACS/lab6_words_count_4-ruban_bondarenko_trush_qt/include/: archive_manager.hpp  toml_parser.hpp  word_count.hpp
ACS/lab6_words_count_4-ruban_bondarenko_trush_qt/src/: archive_manager.cpp  list_and_read.cpp  main.cpp  merge.cpp  options_parser.cpp
ACS/lab6_words_count_4-ruban_bondarenko_trush_tbb1/: readme.md
ACS/lab6_words_count_4-ruban_bondarenko_trush_tbb1/include/: list_and_read.hpp
ACS/lab6_words_count_4-ruban_bondarenko_trush_tbb2/: index.cfg  readme.md  run.py
ACS/lab6_words_count_4-ruban_bondarenko_trush_tbb2/src/: toml_parser.cpp  word_count.cpp
POC/lab1_make_cmake-ostap-team/: .gitignore  README.md
POC/lab1_make_cmake-ostap-team/src/examples/: CMakeLists.txt  makefile
POC/lab2_cstring-o_oteam/: .gitignore  CMakeLists.txt  README.md  feedback.md
POC/lab2_cstring-o_oteam/array_lib/: dynamic_array.c  dynamic_array.h
POC/lab2_cstring-o_oteam/c_str_lib/: c_string.c  c_string.h
POC/lab2_cstring-o_oteam/src/: main.c
POC/lab2_cstring-o_oteam/test_files/: test.txt  test2.txt
POC/lab3_asm_func-minieieva_trush/: README.md  makefile
POC/lab3_asm_func-minieieva_trush/func_1/: makefile
POC/lab3_asm_func-minieieva_trush/func_2/: makefile
POC/lab3_asm_modifications-Adeon18/: README.md
POC/lab3_asm_modifications-Adeon18/fixed_prog/: prg_45_fixed.x
POC/lab3_asm_modifications-Adeon18/previous_prog/: prg_45.x
POC/psoc_5-2-muliak_trush/: .gitignore  LABs.cywrk  README.md
POC/psoc_5-2-muliak_trush/Lab_1_1_LED.cydsn/: Lab_1_1_LED.cycdx  Lab_1_1_LED.cydwr  Lab_1_1_LED.cyprj  Lab_1_1_LED.cyprj.Ade0n  main.c
POC/psoc_5-2-muliak_trush/Lab_1_2_LED.cydsn/: Lab_1_2_LED.cydwr  Lab_1_2_LED.cyprj  Lab_1_2_LED.cyprj.Ade0n  main.c
POC/psoc_5-2-muliak_trush/Lab_1_3_LED.cydsn/: Lab_1_3_LED.cydwr  Lab_1_3_LED.cyfit  Lab_1_3_LED.cyprj  Lab_1_3_LED.cyprj.Ade0n  Lab_1_3_LED.rpt  main.c
POC/psoc_5-2-muliak_trush/Lab_2_7SEG.cydsn/: Lab_2_7SEG.cyfit  Lab_2_7SEG.cyprj  Lab_2_7SEG_timing.html  main.c
POC/psoc_5-2-muliak_trush/Lab_2_7SEG_2.cydsn/: Lab_2_7SEG_2.cyfit  Lab_2_7SEG_2.cyprj  Lab_2_7SEG_2.cyprj.Ade0n  Lab_2_7SEG_2.rpt  Lab_2_7SEG_2_timing.html  main.c
POC/psoc_5-2-muliak_trush/Lab_2_7SEG_3.cydsn/: Lab_2_7SEG_3.cyprj  Lab_2_7SEG_3.cyprj.Ade0n  Lab_2_7SEG_3_timing.html  main.c
POC/psoc_5-2-muliak_trush/Lab_3_1_UART_Transmitting.cydsn/: Lab_3_1_UART_Transmitting.cyfit  Lab_3_1_UART_Transmitting.cyprj  Lab_3_1_UART_Transmitting.cyprj.Ade0n  Lab_3_1_UART_Transmitting_timing.html
POC/psoc_5-2-muliak_trush/Lab_3_2_UART_Led.cydsn/: Lab_3_2_UART_Led.cycdx  Lab_3_2_UART_Led.cyprj  Lab_3_2_UART_Led.cyprj.Ade0n  main.c
include/: archive_manager.hpp  custom_types.hpp  limits.hpp  list_and_read.hpp  merge.hpp  options_parser.hpp  thread_pool_runnables.hpp  time_measurer.hpp  toml_parser.hpp  word_count.hpp
src/: archive_manager.cpp  list_and_read.cpp  main.cpp  toml_parser.cpp  word_count.cpp
(+583 files in other folders)
